Don't duplicate cmake's effort: use what it knows for the flagpoll file.
At worst, there will be extra warnings.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,17 +51,16 @@ set(prefix "\${fp_file_cwd}/../..")
 set(exec_prefix "\${prefix}")
 set(includedir "\${fp_file_cwd}/../../${INCLUDE_DIR}")
 set(libdir "\${fp_file_cwd}/../../${ARCH_DIR}")
+set(include_path_flag "${CMAKE_INCLUDE_FLAG_C}")
+set(cppdom_libs "${CMAKE_LINK_LIBRARY_FLAG}cppdom-${VERSION_UNDERSCORES}")
+set(lib_path_flag ${CMAKE_LIBRARY_PATH_FLAG})
+set(cppdom_cxxflags)
 
 if(CMAKE_COMPILER_IS_GNUCXX OR ( CMAKE_CXX_COMPILER_ID STREQUAL "Clang" ) )
     set(cppdom_cxxflags "-Wno-deprecated")
-    set(include_path_flag "-I")
-    set(cppdom_libs "-lcppdom-${VERSION_UNDERSCORES}")
-    set(lib_path_flag "-L")
 elseif(MSVC)
-    set(include_path_flag "/I")
-    set(lib_path_flag "/libpath:")
 else()
-    message(FATAL_ERROR "Compiler not recognized - can't generate values for Flagpoll file")
+    message(STATUS "Compiler not recognized - values for Flagpoll file might be incomplete")
 endif()
 
 configure_file(cppdom.fpc.in "${CMAKE_CURRENT_BINARY_DIR}/cppdom.fpc" @ONLY)
